change node-sass in sass

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-image-resize": "^0.13.1",
     "gulp-imagemin": "^8.0.0",
     "gulp-webp": "^4.0.1",
-    "imagemin-webp": "^6.0.0"
+    "imagemin-webp": "^6.0.0",
+    "sass": "^1.43.4"
   }
 }
